fixed footer alignment but needs to stick to bottom and needs alignment fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,7 @@ footer {
     background-color: black;
     color: white;
     line-height: 1.5;
+    width: 100%;
 }
 
 footer a {
@@ -136,11 +137,11 @@ footer li {
 }
 
 .footerColumn1 {
-    margin: auto;
+    margin: 50px auto auto auto;
 }
 
 .footerColumn2 {
-    margin: auto;
+    margin: -15px auto auto auto;
 }
 
 .footerColumn3 {
@@ -170,24 +171,35 @@ footer .footerColumn1 img{
 
 .footerColumn1 ul{
     font-family: "Barlow", sans-serif;
-    margin: auto;
+    margin: 30px auto auto auto;
 }
 
 footer .footerColumn2 img{
+    
+}
+
+.footerColumn3 li{
+    margin-right: 50px;
 }
 
 .footerColumn2 ul{
+    position: relative;
     font-family: "Barlow", sans-serif;
-    margin: auto;
+    margin-bottom: 100px;
+    right: 20px;
+    top: -80px;
 }
 
 .footerColumn2 h2{
     font-family: "Barlow Condensed", sans-serif;
+    padding-bottom: 20px;
+    position: relative;
+    left: 25px;
 }
 
 .footerColumn3 ul{
     font-family: "Barlow", sans-serif;
-    margin: auto;
+    margin-bottom: 175px;
 }
 
 
@@ -276,5 +288,17 @@ footer .footerColumn2 img{
     .footerRow {
         grid-template-columns: none;
         grid-template-rows: 1fr 1fr 1fr;
+    }
+
+    .footerColumn1{
+        margin: auto;
+    }
+
+    .footerColumn2{
+        margin: auto;
+    }
+
+    .footerColumn3{
+        margin: auto;
     }
 }
